feat: 为 `jupyter-client` 插件提供 `svelte-i18n` 支持 | Provides `svelte-i18n` support for `jupyter-client` plugin.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vite": "^4.3.7"
     },
     "dependencies": {
+        "@workspace/types": "workspace:^",
         "@workspace/utils": "workspace:^",
         "siyuan": "workspace:^"
     }
