--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
          */
         "allowJs": true,
         "checkJs": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "lib": [
+            "ESNext",
+            "DOM"
+        ],
     },
     "include": [
         "src/**/*.d.ts",
