build(siyuan): 使用思源提供的类型定义文件 | Use the type definition file provided by SiYuan.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     },
     "dependencies": {
         "@workspace/types": "workspace:^",
-        "@workspace/utils": "workspace:^",
-        "siyuan": "workspace:^"
+        "@workspace/utils": "workspace:^"
     }
 }
