--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "build:dev": "vite build --sourcemap inline",
         "preview": "vite preview",
         "check": "svelte-check --tsconfig ./tsconfig.json"
     },
     "devDependencies": {
-        "@jupyterlab/services": "^7.0.2",
-        "@sveltejs/vite-plugin-svelte": "^2.4.2",
-        "@tsconfig/svelte": "^4.0.1",
-        "less": "^4.1.3",
-        "svelte": "^4.0.1",
+        "@jupyterlab/services": "^7.0.5",
+        "@sveltejs/vite-plugin-svelte": "^2.4.5",
+        "@tsconfig/svelte": "^5.0.0",
+        "less": "^4.2.0",
+        "svelte": "^4.2.0",
         "svelte-check": "^2.10.3",
-        "svelte-i18n": "^3.6.0",
         "svelte-preprocess-less": "^0.4.0",
-        "tslib": "^2.6.0",
+        "tslib": "^2.6.2",
         "typescript": "^5.1.6",
-        "vite": "^4.3.9"
+        "vite": "^4.4.9"
     },
     "dependencies": {
+        "@workspace/components": "workspace:^",
         "@workspace/types": "workspace:^",
         "@workspace/utils": "workspace:^"
     }
