style(custom-block): 将 `eslint` 配置应用于 `custom-block` 模块 | Apply `eslint` configuration to `custom-block` module

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ## 将要拉取的仓库 | repository will to pull
+          # 将要拉取的仓库 | repository will to pull
           repository: Zuoqiu-Yingyi/siyuan-packages-monorepo
 
       # Install Node.js
@@ -29,10 +29,10 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          ## Node.js 版本号 | Node.js version
+          # Node.js 版本号 | Node.js version
           node-version: 20
 
-          ## Node.js 源 | Node.js registry
+          # Node.js 源 | Node.js registry
           registry-url: https://registry.npmjs.org
 
       # Install pnpm
@@ -41,10 +41,10 @@ jobs:
         uses: pnpm/action-setup@v2
         id: pnpm-install
         with:
-          ## pnpm 版本号 | pnpm version
+          # pnpm 版本号 | pnpm version
           version: 8
 
-          ## 是否安装 npm 包 | if install npm package?
+          # 是否安装 npm 包 | if install npm package?
           run_install: false
 
       # Get pnpm store directory
@@ -84,10 +84,10 @@ jobs:
         if: success()
         uses: crazy-max/ghaction-github-pages@v3
         with:
-          ## 构建产物目录 | directory of build artifacts
+          # 构建产物目录 | directory of build artifacts
           build_dir: ${{ env.PACKAGE_PATH }}/dist
 
-          ## 提交到目标分支
+          # 提交到目标分支
           target_branch: publish
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_ACTIONS }}
