--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,12 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler"
-  },
-  "include": ["vite.config.ts"]
+    "compilerOptions": {
+        "composite": true,
+        "module": "ESNext",
+        "moduleResolution": "bundler",
+        "skipLibCheck": true,
+    },
+    "include": [
+        "svelte.config.js",
+        "vite.config.ts",
+    ],
 }
