style(monaco-editor): 将 `eslint` 配置应用于 `monaco-editor` 模块 | Apply `eslint` configuration to `monaco-editor` module

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "preview": "vite preview",
         "lint": "eslint --max-warnings 0 .",
         "format": "eslint --fix .",
-        "check": "svelte-check --tsconfig ./tsconfig.json"
+        "check:svelte": "svelte-check --tsconfig ./tsconfig.json"
     },
     "dependencies": {
         "@workspace/components": "workspace:^",
