--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,10 @@
         },
     ],
     "include": [
+        "public/i18n/*.json",
         "src/**/*.d.ts",
-        "src/**/*.ts",
         "src/**/*.js",
         "src/**/*.svelte",
+        "src/**/*.ts",
     ],
 }
