--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,6 @@
 {
     "prerelease": true,
+    "release-type": "node",
     "pull-request-header": ":robot: A new release will be created",
     "changelog-types": [
         {
