ci: 更新 `release-please-action` 配置 | update `release-please-action`  configuration

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,3 +1,9 @@
 {
-    "release-as": "1.2.0"
+    "packages": {
+        ".": {
+            "release-type": "node",
+            "package-name": "custom-block",
+            "release-as": "1.2.0"
+        }
+    }
 }
