--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,7 +1,8 @@
 {
     "packages": {
         ".": {
-            "package-name": "custom-block"
+            "package-name": "custom-block",
+            "component": ""
         }
     },
     "release-as": "1.2.0"
