ci: 更新 `release-please-action` 配置 | update `release-please-action` configuration

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,7 @@
 {
+    "packages": {
+        ".": {}
+    },
     "prerelease": true,
     "release-type": "node",
     "pull-request-header": ":robot: A new release will be created",
