--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,4 +1,5 @@
 {
-    ".": "1.2.0",
+    ".": "1.1.4",
+    "last-release-sha": "f31437a6e522af54ee900370f319f3f8cfc8c5ed",
     "release-as": "1.2.0"
 }
