ci: 更新 `release-please-action` 配置 | update `release-please-action` configuration

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -30,7 +30,7 @@ jobs:
           target-branch: main
 
           # Path to the release-please config in the repository. Defaults to release-please-config.json
-          config-file: release-please-config.json
+          # config-file: release-please-config.json
 
           # Path to the release-please versions manifest. Defaults to .release-please-manifest.json
-          manifest-file: .release-please-manifest.json
+          # manifest-file: .release-please-manifest.json
