--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,5 @@
 {
+    "last-release-sha": "f31437a6e522af54ee900370f319f3f8cfc8c5ed",
     "packages": {
         ".": {
             "release-as": "1.2.1",
